--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,8 @@
 @import "tailwindcss/components";
 
 @import "tailwindcss/utilities";
+
+body {
+  font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
+}
